feat: enhance reactive security, CORS profiles, error handling, and router configurations
- Added externalized security headers configuration.
- Implemented a global exception handler for uniform error response formatting.
- Introduced CORS configurations with profile-based behavior.
- Updated router functions and added OpenAPI annotations for improved API documentation.